--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -23,13 +23,13 @@ Library
   Hs-Source-Dirs:      src  
   Build-depends:       base < 5,
 
-                       array == 0.4.*,
+                       array >= 0.3 && < 0.5,
                        bytestring == 0.9.*,
                        containers == 0.4.*,
-                       old-time == 1.1.*,
+                       old-time >= 1.0 && < 1.2,
                        QuickCheck == 2.4.*,
                        text == 0.11.*,
-                       time == 1.4.*
+                       time >= 1.2 && < 1.5
   
   -- Other-modules:       
   -- Build-tools:         
