--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -25,11 +25,11 @@ Library
 
                        array >= 0.3 && < 0.5,
                        bytestring == 0.9.*,
-                       containers == 0.4.*,
+                       containers >= 0.3 && < 0.5,
                        old-time >= 1.0 && < 1.2,
-                       QuickCheck == 2.4.*,
-                       text == 0.11.*,
-                       time >= 1.2 && < 1.5
+                       QuickCheck >= 2.1 && < 2.5,
+                       text >= 0.7 && < 0.12,
+                       time >= 1.1 && < 1.5
   
   -- Other-modules:       
   -- Build-tools:         
