Add support for Data.Int and Data.Word types in older versions of QuickCheck.
The ByteString instance goes through Word8.

--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -46,6 +46,6 @@ Library
                        time >= 1.1 && < 1.5
 
   Ghc-options:         -Wall
-  -- Other-modules:       
+  Other-modules:       Test.QuickCheck.Instances.LegacyNumeric
   -- Build-tools:         
   
