--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -38,7 +38,7 @@ Library
   Build-depends:       base < 5,
 
                        array >= 0.3 && < 0.5,
-                       bytestring == 0.9.*,
+                       bytestring >= 0.9 && < 0.11,
                        containers >= 0.3 && < 0.6,
                        old-time >= 1.0 && < 1.2,
                        QuickCheck >= 2.1 && < 2.6,
