--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -1,5 +1,5 @@
 Name:                quickcheck-instances
-Version:             0.3.5
+Version:             0.3.6
 Synopsis:            Common quickcheck instances
 Description:         QuickCheck instances.
                      .
@@ -40,6 +40,8 @@ Library
                        array >= 0.3 && < 0.6,
                        bytestring >= 0.9 && < 0.11,
                        containers >= 0.3 && < 0.6,
+                       hashable >= 1.1.2.5 && < 1.2.2,
+                       unordered-containers >= 0.2.3 && < 0.2.4,
                        old-time >= 1.0 && < 1.2,
                        QuickCheck >= 2.1 && < 2.7,
                        text >= 0.7 && < 1.1,
