--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -21,7 +21,7 @@ Author:              Antoine Latter
 Maintainer:          aslatter@gmail.com
 Homepage:            https://github.com/aslatter/qc-instances
 Bug-reports:         https://github.com/aslatter/qc-instances/issues
-Copyright:           Copyright Antoine Latter, 2012
+Copyright:           Copyright Antoine Latter, 2012-2014
 Category:            Testing
 Build-type:          Simple
 Extra-source-files:  CHANGES
