--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -45,7 +45,9 @@ Library
                        old-time >= 1.0 && < 1.2,
                        QuickCheck >= 2.1 && < 2.9,
                        text >= 0.7 && < 1.3,
-                       time >= 1.1 && < 1.6
+                       time >= 1.1 && < 1.6,
+                       vector >= 0.9 && <0.12,
+                       scientific >=0.2 && <0.4
 
   Ghc-options:         -Wall
   Other-modules:       Test.QuickCheck.Instances.LegacyNumeric
