--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-# This file has been generated -- see https://github.com/hvr/multi-ghc-travis
 language: c
 sudo: false
 
@@ -13,13 +12,13 @@ before_cache:
 
 matrix:
   include:
-    - env: CABALVER=1.16 GHCVER=7.6.3
+    - env: CABALVER=1.16 GHCVER=7.6.3 QCVER=2.6
       compiler: ": #GHC 7.6.3"
       addons: {apt: {packages: [cabal-install-1.16,ghc-7.6.3], sources: [hvr-ghc]}}
-    - env: CABALVER=1.18 GHCVER=7.8.4
+    - env: CABALVER=1.18 GHCVER=7.8.4 QCVER=2.6
       compiler: ": #GHC 7.8.4"
       addons: {apt: {packages: [cabal-install-1.18,ghc-7.8.4], sources: [hvr-ghc]}}
-    - env: CABALVER=1.22 GHCVER=7.10.3
+    - env: CABALVER=1.22 GHCVER=7.10.3 QCVER=2.8.1
       compiler: ": #GHC 7.10.3"
       addons: {apt: {packages: [cabal-install-1.22,ghc-7.10.3], sources: [hvr-ghc]}}
     - env: CABALVER=head GHCVER=head
@@ -43,6 +42,10 @@ install:
    then
      zcat $HOME/.cabal/packages/hackage.haskell.org/00-index.tar.gz >
           $HOME/.cabal/packages/hackage.haskell.org/00-index.tar;
+   fi
+ - if [ -z "$QCVER" ];
+   then
+     echo "constraints: QuickCheck==$QCVER" > cabal.config ;
    fi
  - travis_retry cabal update -v
  - sed -i 's/^jobs:/-- jobs:/' ${HOME}/.cabal/config
