--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -39,6 +39,7 @@ Library
 
                        array >= 0.3 && < 0.6,
                        bytestring >= 0.9 && < 0.11,
+                       case-insensitive >=1.2.0.4 && <1.3,
                        containers >= 0.3 && < 0.6,
                        hashable >= 1.1.2.3 && < 1.3,
                        unordered-containers >= 0.2.1 && < 0.3,
