--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -45,6 +45,7 @@ Library
                        unordered-containers >= 0.2.1 && < 0.3,
                        old-time >= 1.0 && < 1.2,
                        QuickCheck >= 2.1 && < 2.10,
+                       tagged >= 0.8.5 && <0.9,
                        text >= 0.7 && < 1.3,
                        time >= 1.1 && < 1.7,
                        vector >= 0.9 && <0.12,
