--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -26,6 +26,12 @@ Category:            Testing
 Build-type:          Simple
 Extra-source-files:  CHANGES
 Cabal-version:       >=1.6
+Tested-With:
+  GHC==7.4.2,
+  GHC==7.6.3,
+  GHC==7.8.4,
+  GHC==7.10.3,
+  GHC==8.0.2
 
 Source-repository head
   type:     git
@@ -35,7 +41,7 @@ Library
   -- Modules exported by the library.
   Exposed-modules:     Test.QuickCheck.Instances
   Hs-Source-Dirs:      src
-  Build-depends:       base < 5,
+  Build-depends:       base >=4.5 && < 5,
 
                        array >= 0.3 && < 0.6,
                        bytestring >= 0.9 && < 0.11,
