--- a/.travis.yml
+++ b/.travis.yml
@@ -82,8 +82,8 @@ script:
  # - rm -rf ./dist-newstyle
 
  # build & run tests
- - cabal new-build -w ${HC} ${TEST} ${BENCH} all
- - if [ "x$TEST" = "x--enable-tests" ]; then cabal new-test -w ${HC} ${TEST} all; fi
+ # - cabal new-build -w ${HC} ${TEST} ${BENCH} all
+ # - if [ "x$TEST" = "x--enable-tests" ]; then cabal new-test -w ${HC} ${TEST} all; fi
 
 # EOF
 
