--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -1,5 +1,6 @@
 Name:                quickcheck-instances
 Version:             0.3.12
+x-revision:          3
 Synopsis:            Common quickcheck instances
 Description:         QuickCheck instances.
                      .
@@ -17,10 +18,10 @@ Description:         QuickCheck instances.
 
 License:             BSD3
 License-file:        LICENSE
-Author:              Antoine Latter
-Maintainer:          aslatter@gmail.com
-Homepage:            https://github.com/aslatter/qc-instances
-Bug-reports:         https://github.com/aslatter/qc-instances/issues
+Author:              Antoine Latter <aslatter@gmail.com>
+Maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
+Homepage:            https://github.com/phadej/qc-instances
+Bug-reports:         https://github.com/phadej/qc-instances/issues
 Copyright:           Copyright Antoine Latter, 2012-2014
 Category:            Testing
 Build-type:          Simple
@@ -31,7 +32,8 @@ Tested-With:
   GHC==7.6.3,
   GHC==7.8.4,
   GHC==7.10.3,
-  GHC==8.0.2
+  GHC==8.0.2,
+  GHC==8.2.1
 
 Source-repository head
   type:     git
