--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -49,14 +49,15 @@ Library
                        case-insensitive >=1.2.0.4 && <1.3,
                        containers >= 0.3 && < 0.6,
                        hashable >= 1.1.2.3 && < 1.3,
-                       unordered-containers >= 0.2.1 && < 0.3,
                        old-time >= 1.0 && < 1.2,
                        QuickCheck >= 2.1 && < 2.10,
+                       scientific >=0.2 && <0.4,
                        tagged >= 0.8.5 && <0.9,
                        text >= 0.7 && < 1.3,
                        time >= 1.1 && < 1.9,
-                       vector >= 0.9 && <0.13,
-                       scientific >=0.2 && <0.4
+                       unordered-containers >= 0.2.1 && < 0.3,
+                       uuid-types >=1.0.3 && <1.1,
+                       vector >= 0.9 && <0.13
 
   Ghc-options:         -Wall
   Other-modules:       Test.QuickCheck.Instances.LegacyNumeric
@@ -70,4 +71,6 @@ test-suite self-test
     base,
     QuickCheck,
     quickcheck-instances,
-    containers
+    containers,
+    tagged,
+    uuid-types
