--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -46,6 +46,7 @@ Library
     QuickCheck >=2.10 && <2.11,
 
     array                >=0.3     && <0.6,
+    base-compat          >=0.9.3   && <0.10,
     bytestring           >=0.9     && <0.11,
     case-insensitive     >=1.2.0.4 && <1.3,
     containers           >=0.3     && <0.6,
