--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -1,5 +1,5 @@
 Name:                quickcheck-instances
-Version:             0.3.16
+Version:             0.3.16.1
 Synopsis:            Common quickcheck instances
 Description:         QuickCheck instances.
                      .
@@ -32,7 +32,9 @@ Tested-With:
   GHC==7.8.4,
   GHC==7.10.3,
   GHC==8.0.2,
-  GHC==8.2.1
+  GHC==8.2.2,
+  -- GHC-8.4 is in alpha atm
+  GHC==8.4.1
 
 Source-repository head
   type:     git
@@ -43,28 +45,28 @@ Library
   Hs-Source-Dirs:      src
   Build-depends:
     base       >=4.5  && <4.11,
-    QuickCheck >=2.10 && <2.11,
+    QuickCheck >=2.10 && <2.12,
 
-    array                >=0.3     && <0.6,
+    array                >=0.4.0.0 && <0.6,
     base-compat          >=0.9.3   && <0.10,
-    bytestring           >=0.9     && <0.11,
+    bytestring           >=0.9.2.1 && <0.11,
     case-insensitive     >=1.2.0.4 && <1.3,
-    containers           >=0.3     && <0.6,
+    containers           >=0.4.2.1 && <0.6,
     hashable             >=1.2.5.0 && <1.3,
-    old-time             >=1.0     && <1.2,
-    scientific           >=0.2     && <0.4,
+    old-time             >=1.1.0.0 && <1.2,
+    scientific           >=0.2.0.0 && <0.4,
     tagged               >=0.8.5   && <0.9,
-    text                 >=0.7     && <1.3,
-    time                 >=1.1     && <1.9,
-    transformers         >=0.3     && <0.6,
-    transformers-compat  >=0.4     && <0.6,
-    unordered-containers >=0.2.1   && <0.3,
+    text                 >=1.0.0.0 && <1.3,
+    time                 >=1.4     && <1.9,
+    transformers         >=0.3.0.0 && <0.6,
+    transformers-compat  >=0.5     && <0.6,
+    unordered-containers >=0.2.2.0 && <0.3,
     uuid-types           >=1.0.3   && <1.1,
     vector               >=0.9     && <0.13
 
   if !impl(ghc >= 8.0)
     build-depends:
-      semigroups ==0.18.*
+      semigroups >=0.18 && <0.19
 
   if !impl(ghc >= 7.10)
     build-depends:
