--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -65,6 +65,7 @@ Library
     array                >=0.4.0.0 && <0.6,
     base-compat          >=0.9.3   && <0.10,
     bytestring           >=0.9.2.1 && <0.11,
+    bytestring-builder   >=0.10.4  && <0.11,
     case-insensitive     >=1.2.0.4 && <1.3,
     containers           >=0.4.2.1 && <0.6,
     hashable             >=1.2.5.0 && <1.3,
