--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -39,6 +39,11 @@ Source-repository head
   type:     git
   location: https://github.com/phadej/qc-instances.git
 
+Flag bytestring-builder
+  description: Use bytestring-builder (with old bytestring)
+  default: False
+  manual: False
+
 Library
   Exposed-modules:     Test.QuickCheck.Instances
                        Test.QuickCheck.Instances.Array
@@ -65,7 +70,6 @@ Library
     array                >=0.4.0.0 && <0.6,
     base-compat          >=0.9.3   && <0.10,
     bytestring           >=0.9.2.1 && <0.11,
-    bytestring-builder   >=0.10.4  && <0.11,
     case-insensitive     >=1.2.0.4 && <1.3,
     containers           >=0.4.2.1 && <0.6,
     hashable             >=1.2.5.0 && <1.3,
@@ -87,6 +91,14 @@ Library
   if !impl(ghc >= 7.10)
     build-depends:
       nats >=1 && <1.2
+
+  if flag(bytestring-builder)
+    build-depends:
+      bytestring-builder   >=0.10.4  && <0.11,
+      bytestring <0.10.4.0
+  else
+    build-depends:
+      bytestring >=0.10.4.0
 
   Ghc-options:         -Wall
 
