--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -1,5 +1,7 @@
 Name:                quickcheck-instances
 Version:             0.3.18
+x-revision:          1
+
 Synopsis:            Common quickcheck instances
 Description:         QuickCheck instances.
                      .
@@ -68,7 +70,7 @@ Library
     QuickCheck >=2.10 && <2.12,
 
     array                >=0.4.0.0 && <0.6,
-    base-compat          >=0.9.3   && <0.10,
+    base-compat          >=0.9.3   && <0.11,
     bytestring           >=0.9.2.1 && <0.11,
     case-insensitive     >=1.2.0.4 && <1.3,
     containers           >=0.4.2.1 && <0.6,
