--- a/.travis.yml
+++ b/.travis.yml
@@ -130,6 +130,9 @@ script:
   # Constraint set QuickCheck-2.11
   - if [ $HCNUMVER -ge 0 ]; then cabal new-build -w ${HC} --disable-tests --disable-benchmarks --constraint='QuickCheck==2.11.*' all; else echo skipping...; fi
 
+  # Constraint set QuickCheck-2.12
+  - if [ $HCNUMVER -ge 0 ]; then cabal new-build -w ${HC} --disable-tests --disable-benchmarks --constraint='QuickCheck==2.12.*' all; else echo skipping...; fi
+
   # Constraint set lower-bounds-7.4.2
   - if [ $HCNUMVER -eq 70402 ]; then cabal new-build -w ${HC} --disable-tests --disable-benchmarks --constraint='QuickCheck             ==2.10' --constraint='array                  ==0.4.0.0' --constraint='base                   ==4.5.1.0' --constraint='base-compat            ==0.9.3' --constraint='bytestring             ==0.9.2.1' --constraint='case-insensitive       ==1.2.0.4' --constraint='containers             ==0.4.2.1' --constraint='hashable               ==1.2.5.0' --constraint='nats                   ==1' --constraint='old-time               ==1.1.0.0' --constraint='scientific             ==0.2.0.0' --constraint='semigroups             ==0.18' --constraint='tagged                 ==0.8.5' --constraint='text                   ==1.0.0.0' --constraint='time                   ==1.4' --constraint='transformers           ==0.3.0.0' --constraint='transformers-compat    ==0.5.1.*' --constraint='unordered-containers   ==0.2.2.0' --constraint='uuid-types             ==1.0.3' --constraint='vector                 ==0.9' all; else echo skipping...; fi
 
