--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -35,7 +35,8 @@ Tested-With:
   GHC==7.10.3,
   GHC==8.0.2,
   GHC==8.2.2,
-  GHC==8.4.3
+  GHC==8.4.3,
+  GHC==8.6.1
 
 Source-repository head
   type:     git
@@ -66,14 +67,14 @@ Library
                        Test.QuickCheck.Instances.Vector
   Hs-Source-Dirs:      src
   Build-depends:
-    base       >=4.5  && <4.12,
+    base       >=4.5  && <4.13,
     QuickCheck >=2.10 && <2.13,
 
     array                >=0.4.0.0 && <0.6,
     base-compat          >=0.9.3   && <0.11,
     bytestring           >=0.9.2.1 && <0.11,
     case-insensitive     >=1.2.0.4 && <1.3,
-    containers           >=0.4.2.1 && <0.6,
+    containers           >=0.4.2.1 && <0.7,
     hashable             >=1.2.5.0 && <1.3,
     old-time             >=1.1.0.0 && <1.2,
     scientific           >=0.2.0.0 && <0.4,
