--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -68,6 +68,7 @@ Library
   Build-depends:
     base       >=4.5  && <4.13,
     QuickCheck >=2.10 && <2.13,
+    tf-random  >=0.5  && <0.6,
 
     array                >=0.4.0.0 && <0.6,
     base-compat          >=0.9.3   && <0.11,
@@ -115,3 +116,13 @@ test-suite self-test
     containers,
     tagged,
     uuid-types
+
+benchmark bytestring-gen
+  type: exitcode-stdio-1.0
+  main-is: ByteString.hs
+  hs-source-dirs: bench
+  build-depends:
+    base,
+    QuickCheck,
+    quickcheck-instances,
+    bytestring
