--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -66,8 +66,9 @@ Library
                        Test.QuickCheck.Instances.Vector
   Hs-Source-Dirs:      src
   Build-depends:
-    base       >=4.5  && <4.13,
-    QuickCheck >=2.13 && <2.14,
+    base       >=4.5   && <4.13,
+    QuickCheck >=2.13  && <2.14,
+    splitmix   >=0.0.2 && <0.1,
 
     array                >=0.4.0.0 && <0.6,
     base-compat          >=0.9.3   && <0.11,
@@ -115,3 +116,13 @@ test-suite self-test
     containers,
     tagged,
     uuid-types
+
+benchmark bytestring-gen
+  type: exitcode-stdio-1.0
+  main-is: ByteString.hs
+  hs-source-dirs: bench
+  build-depends:
+    base,
+    QuickCheck,
+    quickcheck-instances,
+    bytestring
