--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -1,5 +1,5 @@
 Name:                quickcheck-instances
-Version:             0.3.21
+Version:             0.3.22
 
 Synopsis:            Common quickcheck instances
 Description:         QuickCheck instances.
@@ -65,11 +65,12 @@ Library
                        Test.QuickCheck.Instances.UUID
                        Test.QuickCheck.Instances.UnorderedContainers
                        Test.QuickCheck.Instances.Vector
+                       Test.QuickCheck.Instances.Void
   Hs-Source-Dirs:      src
   Build-depends:
-    base       >=4.5   && <4.13,
-    QuickCheck >=2.13  && <2.14,
-    splitmix   >=0.0.2 && <0.1,
+    base       >=4.5    && <4.13,
+    QuickCheck >=2.13.2 && <2.14,
+    splitmix   >=0.0.2  && <0.1,
 
     array                >=0.4.0.0 && <0.6,
     base-compat          >=0.9.3   && <0.11,
@@ -97,7 +98,8 @@ Library
 
   if !impl(ghc >= 7.10)
     build-depends:
-      nats >=1 && <1.2
+      nats >=1 && <1.2,
+      void >=0.7.2 && <0.8
 
   if flag(bytestring-builder)
     build-depends:
