--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -1,5 +1,5 @@
 Name:                quickcheck-instances
-Version:             0.3.20
+Version:             0.3.21
 
 Synopsis:            Common quickcheck instances
 Description:         QuickCheck instances.
@@ -18,11 +18,11 @@ Description:         QuickCheck instances.
 
 License:             BSD3
 License-file:        LICENSE
-Author:              Antoine Latter <aslatter@gmail.com>
+Author:              Antoine Latter <aslatter@gmail.com>, Oleg Grenrus <oleg.grenrus@iki.fi>
 Maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
 Homepage:            https://github.com/phadej/qc-instances
 Bug-reports:         https://github.com/phadej/qc-instances/issues
-Copyright:           Copyright Antoine Latter, 2012-2014
+Copyright:           Copyright 2012-2016 Antoine Latter, 2017-2019 Oleg Grenrus
 Category:            Testing
 Build-type:          Simple
 Extra-source-files:  CHANGES
@@ -35,7 +35,8 @@ Tested-With:
   GHC==8.0.2,
   GHC==8.2.2,
   GHC==8.4.4,
-  GHC==8.6.4
+  GHC==8.6.5,
+  GHC==8.8.1
 
 Source-repository head
   type:     git
@@ -75,21 +76,24 @@ Library
     bytestring           >=0.9.2.1 && <0.11,
     case-insensitive     >=1.2.0.4 && <1.3,
     containers           >=0.4.2.1 && <0.7,
-    hashable             >=1.2.5.0 && <1.3,
+    hashable             >=1.2.5.0 && <1.4,
     old-time             >=1.1.0.0 && <1.2,
     scientific           >=0.2.0.0 && <0.4,
     tagged               >=0.8.5   && <0.9,
     text                 >=1.0.0.0 && <1.3,
-    time                 >=1.4     && <1.9,
+    time-compat          >=1.9.2.2 && <1.10,
     transformers         >=0.3.0.0 && <0.6,
     transformers-compat  >=0.5     && <0.7,
     unordered-containers >=0.2.2.0 && <0.3,
     uuid-types           >=1.0.3   && <1.1,
     vector               >=0.9     && <0.13
 
+  -- version is irrelevant.
+  Build-depends: time
+
   if !impl(ghc >= 8.0)
     build-depends:
-      semigroups >=0.18 && <0.19
+      semigroups >=0.18 && <0.20
 
   if !impl(ghc >= 7.10)
     build-depends:
