--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@
 #
 # For more information, see https://github.com/haskell-CI/haskell-ci
 #
-# version: 0.9.20200325
+# version: 0.9.20200326
 #
 version: ~> 1.0
 language: c
@@ -111,6 +111,8 @@ install:
   - |
     echo "packages: ." >> cabal.project
   - |
+    echo "package quickcheck-instances"           >> cabal.project
+    echo "  ghc-options: -Werror=missing-methods" >> cabal.project
   - "for pkg in $($HCPKG list --simple-output); do echo $pkg | sed 's/-[^-]*$//' | (grep -vE -- '^(quickcheck-instances)$' || true) | sed 's/^/constraints: /' | sed 's/$/ installed/' >> cabal.project.local; done"
   - cat cabal.project || true
   - cat cabal.project.local || true
@@ -136,6 +138,8 @@ script:
   - |
     echo "packages: ${PKGDIR_quickcheck_instances}" >> cabal.project
   - |
+    echo "package quickcheck-instances"           >> cabal.project
+    echo "  ghc-options: -Werror=missing-methods" >> cabal.project
   - "for pkg in $($HCPKG list --simple-output); do echo $pkg | sed 's/-[^-]*$//' | (grep -vE -- '^(quickcheck-instances)$' || true) | sed 's/^/constraints: /' | sed 's/$/ installed/' >> cabal.project.local; done"
   - cat cabal.project || true
   - cat cabal.project.local || true
@@ -161,5 +165,5 @@ script:
   # Constraint set lower-bounds-7.4.2
   - if [ $HCNUMVER -lt 70600 ] ; then ${CABAL} v2-build $WITHCOMPILER --disable-tests --disable-benchmarks --constraint='QuickCheck             ==2.13.2' --constraint='array                  ==0.4.0.0' --constraint='base                   ==4.5.1.0' --constraint='base-compat            ==0.9.3' --constraint='bytestring             ==0.9.2.1' --constraint='case-insensitive       ==1.2.0.4' --constraint='containers             ==0.4.2.1' --constraint='hashable               ==1.2.5.0' --constraint='nats                   ==1' --constraint='old-time               ==1.1.0.0' --constraint='scientific             ==0.2.0.0' --constraint='semigroups             ==0.18.5' --constraint='tagged                 ==0.8.5' --constraint='text                   ==1.0.0.0' --constraint='time                   ==1.4' --constraint='transformers           ==0.3.0.0' --constraint='transformers-compat    ==0.5.1.*' --constraint='unordered-containers   ==0.2.2.0' --constraint='uuid-types             ==1.0.3' --constraint='vector                 ==0.9' all ; fi
 
-# REGENDATA ("0.9.20200325",["--config=cabal.haskell-ci","--output=.travis.yml","quickcheck-instances.cabal"])
+# REGENDATA ("0.9.20200326",["--config=cabal.haskell-ci","--output=.travis.yml","quickcheck-instances.cabal"])
 # EOF
