--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -1,6 +1,5 @@
 name:               quickcheck-instances
-version:            0.3.22
-x-revision:         4
+version:            0.3.23
 synopsis:           Common quickcheck instances
 description:
   QuickCheck instances.
@@ -65,10 +64,11 @@ library
     Test.QuickCheck.Instances.Semigroup
     Test.QuickCheck.Instances.Tagged
     Test.QuickCheck.Instances.Text
+    Test.QuickCheck.Instances.These
     Test.QuickCheck.Instances.Time
     Test.QuickCheck.Instances.Transformer
-    Test.QuickCheck.Instances.UUID
     Test.QuickCheck.Instances.UnorderedContainers
+    Test.QuickCheck.Instances.UUID
     Test.QuickCheck.Instances.Vector
     Test.QuickCheck.Instances.Void
 
@@ -80,18 +80,19 @@ library
 
   build-depends:
       array                 >=0.4.0.0 && <0.6
-    , base-compat           >=0.9.3   && <0.12
+    , base-compat           >=0.10.5  && <0.12
     , bytestring            >=0.9.2.1 && <0.11
     , case-insensitive      >=1.2.0.4 && <1.3
     , containers            >=0.4.2.1 && <0.7
-    , hashable              >=1.2.5.0 && <1.4
+    , hashable              >=1.2.7.0 && <1.4
     , old-time              >=1.1.0.0 && <1.2
     , scientific            >=0.2.0.0 && <0.4
     , tagged                >=0.8.5   && <0.9
     , text                  >=1.0.0.0 && <1.3
+    , these                 >=1.1     && <1.2
     , time-compat           >=1.9.2.2 && <1.10
     , transformers          >=0.3.0.0 && <0.6
-    , transformers-compat   >=0.5     && <0.7
+    , transformers-compat   >=0.6.5   && <0.7
     , unordered-containers  >=0.2.2.0 && <0.3
     , uuid-types            >=1.0.3   && <1.1
     , vector                >=0.9     && <0.13
