--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -28,7 +28,7 @@ copyright:          Copyright 2012-2016 Antoine Latter, 2017-2019 Oleg Grenrus
 category:           Testing
 build-type:         Simple
 extra-source-files: CHANGES
-cabal-version:      >=1.8
+cabal-version:      >=1.10
 tested-with:
   GHC ==7.4.2
    || ==7.6.3
@@ -51,6 +51,7 @@ flag bytestring-builder
   manual:      False
 
 library
+  default-language: Haskell2010
   exposed-modules:
     Test.QuickCheck.Instances
     Test.QuickCheck.Instances.Array
@@ -72,7 +73,7 @@ library
     Test.QuickCheck.Instances.Vector
     Test.QuickCheck.Instances.Void
 
-  hs-source-dirs:  src
+  hs-source-dirs:   src
   build-depends:
       base        >=4.5    && <4.15
     , QuickCheck  >=2.13.2 && <2.15
@@ -98,7 +99,7 @@ library
     , vector                >=0.9     && <0.13
 
   -- version is irrelevant.
-  build-depends:   time
+  build-depends:    time
 
   if !impl(ghc >=8.0)
     build-depends: semigroups >=0.18.5 && <0.20
@@ -116,12 +117,13 @@ library
   else
     build-depends: bytestring >=0.10.4.0
 
-  ghc-options:     -Wall
+  ghc-options:      -Wall
 
 test-suite self-test
-  type:           exitcode-stdio-1.0
-  main-is:        Tests.hs
-  hs-source-dirs: test
+  default-language: Haskell2010
+  type:             exitcode-stdio-1.0
+  main-is:          Tests.hs
+  hs-source-dirs:   test
   build-depends:
       base
     , containers
@@ -131,9 +133,10 @@ test-suite self-test
     , uuid-types
 
 benchmark bytestring-gen
-  type:           exitcode-stdio-1.0
-  main-is:        ByteString.hs
-  hs-source-dirs: bench
+  default-language: Haskell2010
+  type:             exitcode-stdio-1.0
+  main-is:          ByteString.hs
+  hs-source-dirs:   bench
   build-depends:
       base
     , bytestring
