--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -1,6 +1,5 @@
 name:               quickcheck-instances
-version:            0.3.23
-x-revision:         1
+version:            0.3.24
 synopsis:           Common quickcheck instances
 description:
   QuickCheck instances.
@@ -64,6 +63,7 @@ library
     Test.QuickCheck.Instances.OldTime
     Test.QuickCheck.Instances.Scientific
     Test.QuickCheck.Instances.Semigroup
+    Test.QuickCheck.Instances.Strict
     Test.QuickCheck.Instances.Tagged
     Test.QuickCheck.Instances.Text
     Test.QuickCheck.Instances.These
@@ -88,10 +88,11 @@ library
     , containers            >=0.4.2.1 && <0.7
     , hashable              >=1.2.7.0 && <1.4
     , old-time              >=1.1.0.0 && <1.2
-    , scientific            >=0.2.0.0 && <0.4
-    , tagged                >=0.8.5   && <0.9
-    , text                  >=1.0.0.0 && <1.3
-    , these                 >=1.1     && <1.2
+    , scientific            >=0.3.6.2 && <0.4
+    , strict                >=0.4     && <0.5
+    , tagged                >=0.8.6   && <0.9
+    , text                  >=1.2.3.0 && <1.3
+    , these                 >=1.1.1.1 && <1.2
     , time-compat           >=1.9.2.2 && <1.10
     , transformers          >=0.3.0.0 && <0.6
     , transformers-compat   >=0.6.5   && <0.7
