--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -1,5 +1,5 @@
 name:               quickcheck-instances
-version:            0.3.24
+version:            0.3.25
 synopsis:           Common quickcheck instances
 description:
   QuickCheck instances.
@@ -22,8 +22,8 @@ author:
   Antoine Latter <aslatter@gmail.com>, Oleg Grenrus <oleg.grenrus@iki.fi>
 
 maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
-homepage:           https://github.com/phadej/qc-instances
-bug-reports:        https://github.com/phadej/qc-instances/issues
+homepage:           https://github.com/haskellari/qc-instances
+bug-reports:        https://github.com/haskellari/qc-instances/issues
 copyright:          Copyright 2012-2016 Antoine Latter, 2017-2019 Oleg Grenrus
 category:           Testing
 build-type:         Simple
@@ -38,12 +38,12 @@ tested-with:
    || ==8.2.2
    || ==8.4.4
    || ==8.6.5
-   || ==8.8.3
-   || ==8.10.1
+   || ==8.8.4
+   || ==8.10.2
 
 source-repository head
   type:     git
-  location: https://github.com/phadej/qc-instances.git
+  location: https://github.com/haskellari/qc-instances.git
 
 flag bytestring-builder
   description: Use bytestring-builder (with old bytestring)
@@ -96,7 +96,7 @@ library
     , tagged                >=0.8.6   && <0.9
     , text                  >=1.2.3.0 && <1.3
     , these                 >=1.1.1.1 && <1.2
-    , time-compat           >=1.9.2.2 && <1.10
+    , time-compat           >=1.9.4   && <1.10
     , transformers          >=0.3.0.0 && <0.6
     , transformers-compat   >=0.6.5   && <0.7
     , unordered-containers  >=0.2.2.0 && <0.3
