--- a/cabal.project
+++ b/cabal.project
@@ -1,4 +1,4 @@
 packages: .
 
-allow-newer: bytestring
-constraints: bytestring ^>=0.11
+-- allow-newer: bytestring
+-- constraints: bytestring ^>=0.11
