--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -1,5 +1,6 @@
 name:               quickcheck-instances
 version:            0.3.25.2
+x-revision:         1
 synopsis:           Common quickcheck instances
 description:
   QuickCheck instances.
@@ -78,7 +79,7 @@ library
   other-modules:    Test.QuickCheck.Instances.CustomPrelude
   hs-source-dirs:   src
   build-depends:
-      base        >=4.5    && <4.15
+      base        >=4.5    && <4.16
     , QuickCheck  >=2.14.1 && <2.14.3
     , splitmix    >=0.0.2  && <0.2
 
