--- a/quickcheck-instances.cabal
+++ b/quickcheck-instances.cabal
@@ -1,5 +1,6 @@
 name:               quickcheck-instances
 version:            0.3.26.1
+x-revision:         1
 synopsis:           Common quickcheck instances
 description:
   QuickCheck instances.
@@ -111,7 +112,7 @@ library
   build-depends:    time
 
   if !impl(ghc >=8.0)
-    build-depends: semigroups >=0.18.5 && <0.20
+    build-depends: semigroups >=0.18.5 && <0.21
 
   if !impl(ghc >=7.10)
     build-depends:
